fix: update dish list table to hide type and price columns on mobile devices

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -92,4 +92,8 @@ td {
   .hidden-in-tablet {
     display: none;
   }
+
+  .container-search input {
+  width: 200px;
+}
 }
